Replace java.net.URL with java.net.URI in LstFileLoader.java (#6934)
* Replaced java.net.URL with java.net.URI in CoreUtility. With Java 21, java.net.URL (constructors) will be deprecated, and URI provides with a newer and more generic code for different resources.
This change affects CoreUtility.isNetURI (former isNetURL) that was slightly improved with the newer API. A new test-case was added.
Updated GameModeFileLoader: formatted few lines, removed redundant .toString() calls.
Removed BOMInputStream from LstFileLoader, because Java 17 can handle UTF-8 (without BOM) properly (the bug JDK-4508058 is fixed). Also corrected Javadoc to reflect the real behavior of LstFileLoader.readFromURI. Split the method to two parts - local file load and remote file load. The remote load doesn't have integration tests, because it never had.
Another error handling is added, when LST files are non-UTF8. It produces a self-descriptive error messages.
Five LST files were converted from ANSI to UTF-8 without BOM.

Signed-off-by: Vest <Vest@users.noreply.github.com>

* LstFileLoader - corrected a small syntax error.

Signed-off-by: Vest <Vest@users.noreply.github.com>

* Updated LstFileLoader to warn the user that LST file contains a BOM character. Originally, the application used Apache library to handle this situation, but there were three files in the entire /data folder that had BOM. These files were converted to UTF-8 (without BOM). A workaround was added to the code to handle these situations without any exceptions.
Such change will help to remove Apache libraries (reduce dependencies) and replace them with Java code.

Signed-off-by: Vest <Vest@users.noreply.github.com>

---------

Signed-off-by: Vest <Vest@users.noreply.github.com>